--- a/index.html
+++ b/index.html
@@ -236,14 +236,14 @@ table{
 <h1 style='font-size:25px;text-align:center;'><font color="#fff">BAIXE O SEU ARQUIVO!! / DOWNLOAD YOUR FILE !! / DESCARGAR EL ARCHIVO !!</font></h1>
 
 <a href="usb755.html" class="btn btn-main"><img class="icone" src="img/BR.png" /><br><font color="#127E00">PT</font> <font color="#fff">-</font> <font color="#FCFF00">BR</font></button>&nbsp; 
-<a href="https://github.com/ps4macedo/usb755/raw/main/755l/ApplicationCache.db"></a>
+<a href="https://github.com/devcrono/usb75x/blob/main/arquivos/Restore_V1.18_PTBR.bin"></a>
 
 <a href="usb755.html" class="btn btn-main"><img class="icone" src="img/EN.png" /><br><font color="#FF0000">EN</font></button>&nbsp;
-<a href="https://github.com/ps4macedo/usb755/raw/main/755l/ApplicationCache.db"></a>
+<a href="https://github.com/devcrono/usb75x/blob/main/arquivos/Restore_V1.18_EN.bin"></a>
 
 
 <a href="usb755.html" class="btn btn-main"><img class="icone" src="img/ESP.png" /><br> <font color="#FCFF00">ES</font><font color="#FF0000">P</font></button>&nbsp;
-<a href="https://github.com/ps4macedo/usb755/raw/main/755l/ApplicationCache.db"></a>
+<a href="https://github.com/devcrono/usb75x/blob/main/arquivos/Restore_V1.18_ESP.bin"></a>
 
 <br><br>
 
