--- a/index.html
+++ b/index.html
@@ -226,11 +226,11 @@ table{
 
 <hr><br>
 
-<h1 style='font-size:25px;text-align:center;'><font color="#fff">1 - Baixe o arquivo ApplicationCache.db coloque na <font color="#F00">RAIZ Do Pendrive Formatado em FAT32</font> , e conecte na USB Mais proxima do Leitor de Bluray do PS4.</font></h1>
+<h1 style='font-size:25px;text-align:center;'><font color="#fff">1 - Baixe o arquivo correspondente ao seu idioma e coloque na <font color="#F00">RAIZ Do Pendrive Formatado em FAT32</font> , e conecte na USB Mais proxima do Leitor de Bluray do PS4.</font></h1>
 
-<h1 style = 'font-size: 25px; text-align: center;'> <font color = "#fff"> 1 - Download the ApplicationCache.db file and place it in <font color = "#F00"> ROOT Do Pendrive Formatted in FAT32 </font>, and connect to the USB closest to the PS4 Bluray Reader. </font> </h1>
+<h1 style = 'font-size: 25px; text-align: center;'> <font color = "#fff">1 - Download the file corresponding to your language and place it in the<font color = "#F00"> ROOT Do Pendrive Formatted in FAT32 </font>, and connect to the USB closest to the PS4 Bluray Reader. </font> </h1>
 
-<h1 style = 'font-size: 25px; text-align: center;'> <font color = "#fff"> 1 - Descarga el archivo ApplicationCache.db y colócalo en <font color = "#F00"> ROOT Do Pen drive formateado en FAT32 </font>, y conéctelo al USB más cercano al lector Bluray de PS4. </font> </h1><br>
+<h1 style = 'font-size: 25px; text-align: center;'> <font color = "#fff">1 - Descarga el archivo correspondiente a tu idioma y colócalo en el <font color = "#F00"> ROOT Do Pen drive formateado en FAT32 </font>, y conéctelo al USB más cercano al lector Bluray de PS4. </font> </h1><br>
 
 
 <h1 style='font-size:25px;text-align:center;'><font color="#fff">BAIXE O SEU ARQUIVO!! / DOWNLOAD YOUR FILE !! / DESCARGAR EL ARCHIVO !!</font></h1>
