--- a/usb755.html
+++ b/usb755.html
@@ -252,7 +252,7 @@ function done()
 
 window.midExploit = function()
 {
-        preloadScripts(['750.js', 'jb.js', 'preloader.js', 'restore75X.js', 'loader.js'], go);
+        preloadScripts(['exploit.js', 'jb.js', 'preloader.js', 'restore75X.js', 'loader.js'], go);
 }
 
 window.postExploit = function()
@@ -268,11 +268,11 @@ window.postExploit = function()
 <script src="utils.js"></script>
 <script src="int64.js"></script>
 <script src="ps4.js"></script>
-<button id="input1" onfocus="handle2()"></button>
-<button id="input2"></button>
-<button id="input3" onfocus="handle2()"></button>
-<select id="select1">
-<option value="value1">Value1</option>
-</select>
+    <button style="opacity:0" id="input1" onfocus="handle2()"></button>
+    <button style="opacity:0" id="input2"></button>
+    <button style="opacity:0" id="input3" onfocus="handle2()"></button>
+    <select style="opacity:0" id="select1">
+    <option value="value1">Value1</option>
+    </select>
 </body>
 </html>
